finalized PEM import

--- a/ui/About.ui
+++ b/ui/About.ui
@@ -1,7 +1,4 @@
 <ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
  <class>About</class>
  <widget class="QDialog" name="About" >
   <property name="geometry" >
@@ -16,19 +13,37 @@
    <string/>
   </property>
   <layout class="QVBoxLayout" >
-   <property name="margin" >
-    <number>8</number>
-   </property>
    <property name="spacing" >
     <number>6</number>
    </property>
+   <property name="leftMargin" >
+    <number>8</number>
+   </property>
+   <property name="topMargin" >
+    <number>8</number>
+   </property>
+   <property name="rightMargin" >
+    <number>8</number>
+   </property>
+   <property name="bottomMargin" >
+    <number>8</number>
+   </property>
    <item>
     <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
      <property name="spacing" >
       <number>6</number>
+     </property>
+     <property name="leftMargin" >
+      <number>0</number>
+     </property>
+     <property name="topMargin" >
+      <number>0</number>
+     </property>
+     <property name="rightMargin" >
+      <number>0</number>
+     </property>
+     <property name="bottomMargin" >
+      <number>0</number>
      </property>
      <item>
       <widget class="QLabel" name="image1" >
@@ -69,7 +84,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="PushButton1" >
+      <widget class="QPushButton" name="button" >
        <property name="text" >
         <string>Done</string>
        </property>
@@ -120,11 +135,10 @@
    </item>
   </layout>
  </widget>
- <pixmapfunction></pixmapfunction>
  <resources/>
  <connections>
   <connection>
-   <sender>PushButton1</sender>
+   <sender>button</sender>
    <signal>clicked()</signal>
    <receiver>About</receiver>
    <slot>accept()</slot>
