--- a/ui/NewCrl.ui
+++ b/ui/NewCrl.ui
@@ -119,10 +119,30 @@
        </widget>
       </item>
       <item row="0" column="1" >
-       <widget class="Validity" native="1" name="lastUpdate" />
+		  <widget class="Validity" native="1" name="lastUpdate" >
+			  <property name="displayFormat" >
+				  <string>yyyy-MM-dd hh:mm</string>
+			  </property>
+			  <property name="calendarPopup" > 
+				  <bool>true</bool>
+			  </property>
+			  <property name="timeSpec" >
+				  <enum>Qt::UTC</enum>
+			  </property>
+		  </widget>
       </item>
       <item row="1" column="1" >
-       <widget class="Validity" native="1" name="nextUpdate" />
+		  <widget class="Validity" native="1" name="nextUpdate">
+			  <property name="displayFormat" >
+				  <string>yyyy-MM-dd hh:mm</string>
+			  </property>
+			  <property name="calendarPopup" > 
+				  <bool>true</bool>
+			  </property>
+			  <property name="timeSpec" >
+				  <enum>Qt::UTC</enum>
+			  </property>
+		  </widget>
       </item>
      </layout>
     </widget>
@@ -236,7 +256,7 @@
   </customwidget>
   <customwidget>
    <class>Validity</class>
-   <extends>QWidget</extends>
+   <extends>QDateTimeEdit</extends>
    <header>widgets/validity.h</header>
    <container>1</container>
   </customwidget>
